# RustySync

./: .gitignore  Cargo.toml  README.md  client-schema.sql  schema.sql  server-schema.sql
src/: lib.rs  main.rs
src/client/: auth.rs  client.rs  db.rs  mod.rs  utils.rs
src/client/apis/: auth.rs  file.rs  mod.rs
src/client/file_watcher/: mod.rs  source.rs  sync.rs  watcher.rs
src/server/: config_loader.rs  mod.rs  server.rs  storage.rs
src/server/db/: db.rs  source.rs
src/server/handlers/: handlers.rs  mod.rs  source.rs
src/server/handlers/auth/: auth_extractor.rs  handlers.rs  mod.rs
src/server/handlers/file/: handlers.rs
src/shared/: db.rs  errors.rs  mod.rs  models.rs  utils.rs
