[package]
name = "RustySync"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.32"
notify = "8.0.0"
blake3 = "1.6.1"
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"]}
rusqlite = {features = ["bundled"], version = "0.36.0" }
chrono = {features = ["serde"], version = "0.4.41"}
futures-util = "0.3.31"
walkdir = "2.5.0"
sanitize-filename = "0.6.0"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.20", features = ["json"] }